--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body class="background" class="bubble">
 
   <div class="loader" id="loader">
-    <img src="image/logo.png" alt="Logo Hoàng Aqua">
+    <img src="image/LOGO.png" alt="Logo Hoàng Aqua">
   </div>
 
 
   <header class="header-section">
     <div class="logo-area">
-    <img src="image/logo.png" alt="Logo Hoàng Aqua" class="logo">
+    <img src="image/LOGO.png" alt="Logo Hoàng Aqua" class="logo">
     <h1 class="company-name">CÔNG TY TNHH THỦY SẢN HOÀNG AQUA</h1>
   </div>
 
